--- a/scss/_sidemenu.scss
+++ b/scss/_sidemenu.scss
@@ -2,30 +2,39 @@
     position: fixed;
     left: 0;
     top: 0;
-    bottom: 0;
-    height: 100%;
-    padding: 4em 1em 0 1em;
-    box-sizing: border-box;
+    // box-sizing: border-box;
     overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: transparent transparent;
     width: 0;
     background-color: inherit;
     width: 240px;
-    transform: translateX(-240px);
-    transition: transform 200ms;
+    transform: translateX(-260px);
+    // transition: transform 200ms;
     display: flex;
     flex-direction: column;
+    font-size: 1.4rem;
     
     @media only screen and (min-width: 600px) {
         transform: translateX(0);
+    }
+    
+    .blogtube_sidebar_content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        box-sizing: border-box;
+        height: 100dvh;
+        padding: var(--wp-admin--admin-bar--height, 0px) 1em 0 1em;
+        padding: 3em 1em 0 1em;
+        
     }
 
     &.blogtube_sidemenu_open {
         transform: translateX(0);
 
         @media only screen and (min-width: 600px) {
-            transform: translateX(-240px);
+            transform: translateX(-260px);
         }
     }
 
@@ -148,6 +157,7 @@
 
     .blogtube_theme_info {
         margin-top: auto;
+        padding-bottom: 0.5em;
 
         a, span, div {
             color: #717171;
