--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 Theme Name: Blogtube
 Author: Rico
@@ -95,7 +96,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   position: fixed;
   display: flex;
   align-items: stretch;
-  height: 4em;
+  height: 56px;
   background-color: inherit;
   width: 100%;
   box-sizing: border-box;
@@ -123,13 +124,13 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   box-shadow: 0 0 0px 1000px #121212 inset;
   padding: 0.5em;
   padding-left: 1em;
-  font-size: 1.2em;
+  font-size: 16px;
   min-width: 0;
   flex: 1 1 auto;
 }
 #blogtube_searchinput:focus {
   outline: none;
-  border-color: blue;
+  border-color: #1c62b9;
 }
 
 #blogtube_search_submit {
@@ -141,23 +142,24 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   color: var(--blogtube_font_color);
   width: 64px;
   cursor: pointer;
-  font-size: 1.2em;
+  font-size: 1.8rem;
+  font-weight: 400;
 }
 
 #blogtube_sidemenu_toggle {
   color: var(--blogtube_font_color);
-  font-size: 1.8em;
-  border-radius: 5em;
+  font-size: 2.3em;
+  border-radius: 10em;
   cursor: pointer;
   margin: auto 0.5em;
-  padding: 0.3em;
-}
-#blogtube_sidemenu_toggle:hover {
-  background-color: #272727;
-}
-#blogtube_sidemenu_toggle i {
+  height: 32px;
+  width: 32px;
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+#blogtube_sidemenu_toggle:hover {
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 .blogtube_header_logo {
@@ -177,32 +179,37 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   position: fixed;
   left: 0;
   top: 0;
-  bottom: 0;
-  height: 100%;
-  padding: 4em 1em 0 1em;
-  box-sizing: border-box;
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
   width: 0;
   background-color: inherit;
   width: 240px;
-  transform: translateX(-240px);
-  transition: transform 200ms;
+  transform: translateX(-260px);
   display: flex;
   flex-direction: column;
+  font-size: 1.4rem;
 }
 @media only screen and (min-width: 600px) {
   #blogtube_sidemenu {
     transform: translateX(0);
   }
 }
+#blogtube_sidemenu .blogtube_sidebar_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  height: 100dvh;
+  padding: var(--wp-admin--admin-bar--height, 0px) 1em 0 1em;
+  padding: 3em 1em 0 1em;
+}
 #blogtube_sidemenu.blogtube_sidemenu_open {
   transform: translateX(0);
 }
 @media only screen and (min-width: 600px) {
   #blogtube_sidemenu.blogtube_sidemenu_open {
-    transform: translateX(-240px);
+    transform: translateX(-260px);
   }
 }
 #blogtube_sidemenu:hover {
@@ -296,6 +303,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 }
 #blogtube_sidemenu .blogtube_theme_info {
   margin-top: auto;
+  padding-bottom: 0.5em;
 }
 #blogtube_sidemenu .blogtube_theme_info a, #blogtube_sidemenu .blogtube_theme_info span, #blogtube_sidemenu .blogtube_theme_info div {
   color: #717171;
@@ -303,13 +311,14 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 html {
   scrollbar-color: hsl(0, 0%, 67%) transparent;
+  font-size: 10px;
+  margin-top: 0 !important;
 }
 
 body {
   margin: 0;
   background-color: #0f0f0f;
   font-family: "Roboto", "Arial", sans-serif;
-  font-size: 14px;
   display: grid;
   align-items: flex-start;
   grid-template-columns: minmax(0, 1fr) auto;
@@ -343,7 +352,7 @@ main {
   flex-direction: column;
   align-items: center;
   grid-area: main;
-  margin-top: 4em;
+  margin-top: 6em;
   margin-bottom: 2em;
 }
 @media only screen and (min-width: 600px) {
@@ -371,6 +380,7 @@ span,
 table,
 label,
 div,
+aside,
 button {
   color: var(--blogtube_font_color);
 }
@@ -571,9 +581,10 @@ textarea:-webkit-autofill:focus {
 }
 
 .blogtube_post_card {
-  max-width: 50em;
+  max-width: 80em;
   margin: 0 1em;
   display: flex;
+  justify-content: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   padding: 1.5em 0;
   flex-wrap: wrap;
@@ -582,7 +593,7 @@ textarea:-webkit-autofill:focus {
 }
 .blogtube_post_card p, .blogtube_post_card span, .blogtube_post_card div {
   color: #aaa;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
 }
 .blogtube_post_card a {
   text-decoration: none;
@@ -597,10 +608,20 @@ textarea:-webkit-autofill:focus {
   max-height: 2lh;
   overflow: hidden;
 }
+.blogtube_post_card .blogtube_post_card_author_row {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 0.5em;
+  font-size: 2rem;
+  font-weight: 700;
+}
+.blogtube_post_card .blogtube_post_card_author_row img {
+  border-radius: 5em;
+}
 .blogtube_post_card .blogtube_post_card_image_container {
   display: flex;
   justify-content: center;
-  flex: 1 0 auto;
 }
 .blogtube_post_card .blogtube_post_card_image_container img {
   -o-object-fit: cover;
@@ -610,7 +631,12 @@ textarea:-webkit-autofill:focus {
   height: 138px;
   max-width: unset;
 }
+.blogtube_post_card .blogtube_post_card_date::before {
+  content: "•";
+  margin: 0 4px;
+}
 .blogtube_post_card .blogtube_post_card_content_div {
   max-width: 100%;
   flex: 1 0 55%;
+  line-height: 1.8rem;
 }/*# sourceMappingURL=style.css.map */
