--- a/style.scss
+++ b/style.scss
@@ -49,13 +49,14 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 html {
     scrollbar-color: hsl(0,0%,67%) transparent;
+    font-size: 10px;
+    margin-top: 0 !important;
 }
 
 body {
     margin: 0;
     background-color: #0f0f0f;
     font-family: "Roboto","Arial",sans-serif;
-    font-size: 14px;
     display: grid;
     align-items: flex-start;
     grid-template-columns: minmax(0, 1fr) auto;
@@ -89,7 +90,7 @@ main {
     flex-direction: column;
     align-items: center;
     grid-area: main;
-    margin-top: 4em;
+    margin-top: 6em;
     margin-bottom: 2em;
 
     
@@ -117,6 +118,7 @@ span,
 table,
 label,
 div,
+aside,
 button {
     color: var(--blogtube_font_color);
 }
@@ -343,9 +345,10 @@ textarea:-webkit-autofill:focus {
 }
 
 .blogtube_post_card {
-    max-width: 50em;
+    max-width: 80em;
     margin: 0 1em;
     display: flex;
+    justify-content: center;
     border-bottom: 1px solid rgba(255,255,255,0.2);
     padding: 1.5em 0;
     flex-wrap: wrap;
@@ -354,7 +357,7 @@ textarea:-webkit-autofill:focus {
 
     p, span, div {
         color: #aaa;
-        font-size: 0.8rem;
+        font-size: 1.2rem;
     }
     
     a {
@@ -373,10 +376,23 @@ textarea:-webkit-autofill:focus {
         overflow: hidden;
     }
 
+    .blogtube_post_card_author_row {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        gap: 0.5em;
+        font-size: 2rem;
+        font-weight: 700;
+        
+        img {
+            border-radius: 5em
+        }
+    }
+
     .blogtube_post_card_image_container {
         display: flex;
         justify-content: center;
-        flex: 1 0 auto;
+        // flex: 1 0 auto;
 
         img {
             object-fit: cover;
@@ -387,8 +403,16 @@ textarea:-webkit-autofill:focus {
         }
     }
 
+    .blogtube_post_card_date {
+        &::before {
+            content: "•";
+            margin: 0 4px;
+        }
+    }
+
     .blogtube_post_card_content_div {
         max-width: 100%;
         flex: 1 0 55%;
+        line-height: 1.8rem;
     }
 }
