--- a/scss/_sidemenu.scss
+++ b/scss/_sidemenu.scss
@@ -10,7 +10,7 @@
     background-color: inherit;
     width: 240px;
     transform: translateX(-260px);
-    // transition: transform 200ms;
+    transition: transform 200ms;
     display: flex;
     flex-direction: column;
     font-size: 1.4rem;
@@ -162,5 +162,14 @@
         a, span, div {
             color: #717171;
         }
+    }
+}
+
+
+body.admin-bar #blogtube_sidemenu {
+    margin-top: 32px; // adminbar
+
+    .blogtube_sidebar_content{
+        height: calc(100dvh - 32px); // adminbar
     }
 }
