--- a/scss/_single.scss
+++ b/scss/_single.scss
@@ -1,6 +1,7 @@
 .single {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 1em;
     padding-top: 8em;
 
@@ -13,11 +14,12 @@
 
     .blogtube_hero {
         width: 100%;
-        
+
         img {
             aspect-ratio: 16/9;
             height: auto;
             border-radius: 12px;
+            width: 100%;
             max-height: 703px;
             // box-shadow: 0px 0px 30px 10px rgba(255, 255, 255, 0.5);
         }
@@ -107,7 +109,7 @@
                 img {
                     width: 100%;
                     height: 100%;
-                    max-height: 200px;
+                    max-height: 150px;
                     object-fit: cover;
                     border-radius: 16px;
                 }
