--- a/style.css
+++ b/style.css
@@ -131,12 +131,17 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 #comments .comment-form .comment-form-comment textarea {
   resize: vertical;
   max-width: 90vw;
+  height: 70px;
 }
 #comments .comment-form .comment-form-author,
 #comments .comment-form .comment-form-email,
 #comments .comment-form .comment-form-url {
   display: flex;
   flex-direction: column;
+}
+#comments .comment-form .form-submit {
+  display: flex;
+  justify-content: flex-end;
 }
 #comments .comment-metadata {
   display: flex;
@@ -149,12 +154,16 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   gap: 0.5em;
   margin-top: 0.5em;
   padding: 0 3%;
+  line-height: 0;
+  overflow: hidden;
+  color: transparent;
 }
 #comments .blogtube_comment_reply_title small {
   margin-left: auto;
 }
 #comments .blogtube_comment_reply_title small a {
   color: rgb(172, 0, 0);
+  line-height: 1;
 }
 #comments .comment-content {
   padding: 1em;
@@ -238,14 +247,15 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   font-family: Roboto, sans-serif;
   height: 36px;
   font-size: 14px;
-  background-color: var(--blogtube_primary_variant_darker);
+  background-color: rgba(255, 255, 255, 0.1019607843);
   text-decoration: none;
   color: var(--blogtube_font_color);
   border: none;
   cursor: pointer;
 }
 #comments.blogtube_comments_layout_portal #submit:hover {
-  background-color: var(--blogtube_primary_color);
+  background-color: #3ea6ff;
+  color: black;
 }
 
 #blogtube_footer {
@@ -260,7 +270,6 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 }
 
 #blogtube_header {
-  grid-area: header;
   position: fixed;
   display: flex;
   align-items: stretch;
@@ -270,6 +279,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   box-sizing: border-box;
   z-index: 50;
   top: 0;
+  left: 0;
   padding-right: 1em;
 }
 
@@ -379,14 +389,6 @@ body.admin-bar #blogtube_header {
   padding: var(--wp-admin--admin-bar--height, 0px) 1em 0 1em;
   padding: 3em 1em 0 1em;
 }
-#blogtube_sidemenu.blogtube_sidemenu_open {
-  transform: translateX(0);
-}
-@media only screen and (min-width: 600px) {
-  #blogtube_sidemenu.blogtube_sidemenu_open {
-    transform: translateX(-260px);
-  }
-}
 #blogtube_sidemenu:hover {
   scrollbar-color: #717171 transparent;
 }
@@ -484,6 +486,15 @@ body.admin-bar #blogtube_header {
   color: #717171;
 }
 
+.blogtube_sidemenu_open #blogtube_sidemenu {
+  transform: translateX(0);
+}
+@media only screen and (min-width: 600px) {
+  .blogtube_sidemenu_open #blogtube_sidemenu {
+    transform: translateX(-260px);
+  }
+}
+
 body.admin-bar #blogtube_sidemenu {
   margin-top: 32px;
 }
@@ -494,6 +505,7 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 .single {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 1em;
   padding-top: 8em;
 }
@@ -509,6 +521,7 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
   aspect-ratio: 16/9;
   height: auto;
   border-radius: 12px;
+  width: 100%;
   max-height: 703px;
 }
 .single .blogtube_hero h1 {
@@ -583,7 +596,7 @@ body.admin-bar #blogtube_sidemenu .blogtube_sidebar_content {
 .single .blogtube_authorbox .blogtube_author_avatar a img {
   width: 100%;
   height: 100%;
-  max-height: 200px;
+  max-height: 150px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 16px;
@@ -1053,6 +1066,7 @@ blockquote {
   min-width: 300px;
   padding: 24px 24px 0 0;
   font-size: 1.2rem;
+  flex: 0 1 20%;
 }
 
 html {
@@ -1084,24 +1098,21 @@ body {
 main {
   min-height: 90vh;
   display: flex;
+  flex: 1 1 60%;
   flex-direction: column;
   align-items: center;
-  grid-area: main;
   margin-top: 6em;
   margin-bottom: 2em;
 }
-@media only screen and (min-width: 600px) {
-  main {
-    margin-left: 240px;
-  }
-}
 
 @media only screen and (min-width: 600px) {
-  #blogtube_sidemenu.blogtube_sidemenu_open + main {
+  body {
+    margin-left: 240px;
+  }
+  .blogtube_sidemenu_open {
     margin-left: 0;
   }
 }
-
 h1,
 h2,
 h3,
@@ -1161,7 +1172,7 @@ a:hover {
   padding: 0 clamp(0.5rem, 2vw, 1rem);
   overflow: hidden;
   font-size: 1.4rem;
-  width: 100%;
+  flex-grow: 1;
   background-color: var(--blogtube_background_color_posts);
 }
 .blogtube_user_content_container .wp-block-columns {
